--- a/src/html/razonamiento_logico.html
+++ b/src/html/razonamiento_logico.html
@@ -28,7 +28,7 @@
                 </ul>
             </div>
             <div class="flex flex-col items-end font-semibold">
-                <a class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="#">
+                <a type="submit" class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="/src/php/evaluation.php?EVAL_TYPE=razonamiento_logico">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                     </svg>
