evaluation logic added to other evaluation types

--- a/index.html
+++ b/index.html
@@ -13,57 +13,26 @@
     <header class="bg-black">
         <nav class="flex flex-col lg:flex-row items-center justify-between lg:mx-10 p-4">
             <div class="mb-3 lg:mb-0">
-                <a href="/src/index.html">
+                <a href="/index.html">
                     <img class="inline h-12 w-auto mr-3" src="/images/logo2.png" alt="Logo">
                     <h1 class="inline font-lilita text-2xl text-soft-gray align-middle">Ingreso a Universidades</h1>
                 </a>
             </div>
             <div>
                 <ul class="font-nunito font-semibold text-white">
-                    <li class="inline"><a class="hover:text-soft-gray" href="/src/index.html">Inicio</a></li>
+                    <li class="inline"><a class="hover:text-soft-gray" href="/index.html">Inicio</a></li>
                     <li class="inline ml-10">
                         <div tabindex="0" class="dropdown dropdown-hover dropdown-end"> 
                         <p class="hover:text-soft-gray">Simulador</p>
                         <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-60 font-normal text-black">
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/aptitud_abstracta.html">Test de Aptitud abstracta</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_numerico.html">Test de Razonamiento Numérico</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_logico.html">Test de Razonamiento Lógico</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="#">Test de Razonamiento Verbal</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/aptitud_abstracta.html">Aptitud abstracta</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_numerico.html">Razonamiento Numérico</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_logico.html">Razonamiento Lógico</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_verbal.html">Razonamiento Verbal</a></li>
                         </ul>
                         </div>
                     </li>
-                    <li class="inline ml-10">
-                        <div tabindex="0" class="dropdown dropdown-hover dropdown-end">
-                        <p class="hover:text-soft-gray">Temarios</p>
-                        <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-60 font-normal text-black">
-                            <li><a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                                </svg>
-                                Aptitud abstracta
-                            </a></li>
-                            <li><a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                                </svg>
-                                Razonamiento Numérico
-                            </a></li>
-                            <li><a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                                </svg>
-                                Razonamiento Lógico
-                            </a></li>
-                            <li><a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
-                                </svg>
-                                Razonamiento Verbal
-                            </a></li>
-                        </ul>
-                        </div>
-                    </li>
-                    <li class="inline ml-10"><a class="hover:text-soft-gray" href="#">Universidades</a></li>
+                    <li class="inline ml-10"><a class="hover:text-soft-gray" href="/src/html/universidades.html">Universidades</a></li>
                 </ul>
             </div>
         </nav>
@@ -85,7 +54,7 @@
             <div class="flex flex-col items-center justify-center">
                 <img class="w-auto h-32" src="/images/libro-de-matematicas.png" alt="">
                 <p class="px-36 lg:px-20 py-5">
-                    Estudia cada aptitud que se evalúa en el examen de ingreso con los temarios
+                    Estudia cada aptitud que se evalúa en el examen de ingreso con nuestro temario
                 </p>
             </div>
             <div class="flex flex-col items-center justify-center">
