--- a/src/html/aptitud_abstracta.html
+++ b/src/html/aptitud_abstracta.html
@@ -12,7 +12,7 @@
 <body>
     <header class="bg-black">
         <div class="p-4 font-nunito text-white lg:mx-10">
-            <a href="/src/index.html"><img class="w-auto h-12" src="/images/regreso.png" alt=""></a>
+            <a href="/index.html"><img class="w-auto h-12" src="/images/regreso.png" alt=""></a>
         </div>
     </header>
     <main class="bg-abstract bg-fixed bg-cover bg-center font-nunito h-screen">
