--- a/src/html/razonamiento_verbal.html
+++ b/src/html/razonamiento_verbal.html
@@ -15,20 +15,29 @@
             <a href="/index.html"><img class="w-auto h-12" src="/images/regreso.png" alt=""></a>
         </div>
     </header>
-    <main class="bg-numeric bg-fixed bg-cover bg-center font-nunito h-screen">
+    <main class="bg-verbal bg-fixed bg-cover bg-center font-nunito h-screen">
         <div class="lg:mx-10 py-7 items-end">
-            <h1 class="font-black text-4xl text-right mb-12">Prueba de Razonamiento Numérico</h1>
+            <h1 class="font-black text-4xl text-right mb-12">Prueba de Razonamiento Verbal</h1>
             <div class="flex justify-end mb-12">
                 <ul class="w-2/3 font-normal text-base list-image-check list-inside space-y-3">
-                    <li>Esta prueba puede abarcar una amplia gama de habilidades y conceptos matemáticos, como: razonamiento aritmético, razonamiento algebraico, razonamiento estadístico, etc.</li>
-                    <li>Se te presentarán preguntas o ejercicios donde deberás realizar cálculos, identificar patrones, completar secuencias numéricas, resolver problemas basados en datos numéricos o tomar decisiones basadas en información numérica.</li>
-                    <li>Se busca evaluar tu habilidad para analizar, interpretar y resolver problemas numéricos utilizando lógica y razonamiento matemático.</li>
+                    <li>
+                        Esta prueba busca medir tu habilidad para comprender y manipular información escrita o verbal, identificar patrones de palabras y 
+                        conceptos, extraer conclusiones lógicas y resolver problemas relacionados con el lenguaje.
+                    </li>
+                    <li>
+                        Hallarás preguntas que evalúan habilidades como sinónimos y antónimos, analogías, comprensión de lectura, corrección gramatical, 
+                        relaciones de palabras, inferencias y conclusiones, entre otras.
+                    </li>
+                    <li>
+                        El objetivo de la prueba es determinar tu capacidad para utilizar y comprender el lenguaje 
+                        de manera efectiva, lo cual es fundamental en muchas áreas académicas y profesionales.
+                    </li>
                     <li>Son 10 preguntas, para lo cual tendrás 10 minutos para resolverlo.</li>
                     <li>Listo? Buena suerte :) </li>
                 </ul>
             </div>
             <div class="flex flex-col items-end font-semibold">
-                <a class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="/src/php/evaluation.php?EVAL_TYPE=razonamiento_numerico">
+                <a class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="/src/php/evaluation.php?EVAL_TYPE=razonamiento_verbal">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                     </svg>
