--- a/src/html/results.html
+++ b/src/html/results.html
@@ -12,11 +12,20 @@
 </head>
 
 <body>
-    <main class="bg-soft-orange py-4">
-        <div class="lg:mx-10">
-            <h3 id="resultTitle" class="font-nunito text-black"></h3>
+    <main class="h-screen">
+        <div class="relative h-1/2 bg-soft-purple pt-24 px-32">
+            <h1 id="resultTitle" class="font-nunito font-semibold text-black text-center text-xl"></h1>
+            <h3 class="font-nunito font-normal text-black text-lg text-center mt-3">Tu puntuación es de:</h3>
+            <div class="absolute left-1/2 transform -translate-x-1/2 mt-7">
+                <div class="flex justify-center items-center w-72 h-60 bg-soft-blue rounded-lg shadow-md p-4">
+                    <h1 id="result" class="font-lilita text-7xl text-black"></h1>
+                </div>
+            </div>
         </div>
-        <h1 id="result" class="font-lilita text-3xl text-black"></h1>
+        <div class="flex justify-center items-end space-x-3 bg-soft-gray h-1/2 pb-10">
+            <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" id="repeatButton" href="">Reintentar</a>
+            <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" href="/index.html">Finalizar</a>
+        </div>
     </main>
     <script type="text/javascript" src="/src/js/results_script.js"></script>
 </body>
