config eval styles and abstract eval deleted

--- a/src/html/atencion_concentracion.html
+++ b/src/html/atencion_concentracion.html
@@ -12,22 +12,32 @@
 <body>
     <header class="bg-black">
         <div class="p-4 font-nunito text-white lg:mx-10">
-            <a href="/index.html"><img class="w-auto h-12" src="/images/regreso.png" alt=""></a>
+            <a href="/src/index.html"><img class="w-auto h-12" src="/images/regreso.png" alt=""></a>
         </div>
     </header>
-    <main class="bg-abstract bg-fixed bg-cover bg-center font-nunito h-screen">
+    <main class="bg-concentration bg-fixed bg-cover bg-center font-nunito h-screen">
         <div class="lg:mx-10 py-7 items-end">
-            <h1 class="font-black text-4xl text-right mb-12">Prueba de aptitud abstracta</h1>
+            <h1 class="font-black text-4xl text-right mb-12">Prueba de Atención y Concentración</h1>
             <div class="flex justify-end mb-12">
                 <ul class="w-2/3 font-normal text-base list-image-check list-inside space-y-3">
-                    <li>Se te presentarán una serie de elementos o figuras donde tendrás que encontrar patrones, completar secuencias o seleccionar la opción que mejor encaje en el conjunto de elementos.</li>
-                    <li>Algunas de las habilidades que se evalúan en esta prueba incluyen el razonamiento lógico, el pensamiento espacial, el razonamiento inductivo y deductivo, y la capacidad para reconocer y aplicar reglas y patrones abstractos.</li>
+                    <li>
+                        Esta prueba es una evaluación psicológica que se utiliza para medir la capacidad de una persona para 
+                        mantener la concentración y la atención en tareas específicas.
+                    </li>
+                    <li>
+                        Se busca determinar tu capacidad para enfocarte en una actividad determinada y resistir las distracciones 
+                        externas.
+                    </li>
+                    <li>
+                        El resultado de esta prueba puede proporcionar información sobre tu nivel de atención y concentración, 
+                        así como posibles dificultades en estas áreas.
+                    </li>
                     <li>Son 10 preguntas, para lo cual tendrás 10 minutos para resolverlo.</li>
                     <li>Listo? Buena suerte :) </li>
                 </ul>
             </div>
             <div class="flex flex-col items-end font-semibold">
-                <a class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="#">
+                <a type="submit" class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="/src/php/evaluation.php?EVAL_TYPE=atencion_concentracion">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                     </svg>
