--- a/src/html/results.html
+++ b/src/html/results.html
@@ -24,7 +24,7 @@
         </div>
         <div class="flex justify-center items-end space-x-3 bg-soft-gray h-1/2 pb-10">
             <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" id="repeatButton" href="">Reintentar</a>
-            <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" href="/index.html">Finalizar</a>
+            <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" href="/src/index.html">Finalizar</a>
         </div>
     </main>
     <script type="text/javascript" src="/src/js/results_script.js"></script>
