--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,22 @@
     <header class="bg-black">
         <nav class="flex flex-col lg:flex-row items-center justify-between lg:mx-10 p-4">
             <div class="mb-3 lg:mb-0">
-                <a href="/index.html">
+                <a href="/src/index.html">
                     <img class="inline h-12 w-auto mr-3" src="/images/logo2.png" alt="Logo">
                     <h1 class="inline font-lilita text-2xl text-soft-gray align-middle">Ingreso a Universidades</h1>
                 </a>
             </div>
             <div>
                 <ul class="font-nunito font-semibold text-white">
-                    <li class="inline"><a class="hover:text-soft-gray" href="/index.html">Inicio</a></li>
+                    <li class="inline"><a class="hover:text-soft-gray" href="/src/index.html">Inicio</a></li>
                     <li class="inline ml-10">
                         <div tabindex="0" class="dropdown dropdown-hover dropdown-end"> 
                         <p class="hover:text-soft-gray">Simulador</p>
                         <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-60 font-normal text-black">
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/aptitud_abstracta.html">Aptitud abstracta</a></li>
                             <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_numerico.html">Razonamiento Numérico</a></li>
                             <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_logico.html">Razonamiento Lógico</a></li>
                             <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_verbal.html">Razonamiento Verbal</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/atencion_concentracion.html">Atención y Concentración</a></li>
                         </ul>
                         </div>
                     </li>
