links config for MAMP server

--- a/src/html/results.html
+++ b/src/html/results.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../../dist/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
@@ -24,10 +24,10 @@
         </div>
         <div class="flex justify-center items-end space-x-3 bg-soft-gray h-1/2 pb-10">
             <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" id="repeatButton" href="">Reintentar</a>
-            <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" href="/src/index.html">Finalizar</a>
+            <a class="btn border-0 bg-soft-purple text-black hover:bg-soft-blue font-nunito font-bold" href="../index.html">Finalizar</a>
         </div>
     </main>
-    <script type="text/javascript" src="/src/js/results_script.js"></script>
+    <script type="text/javascript" src="../js/results_script.js"></script>
 </body>
 
 </html>
