--- a/src/html/universidades.html
+++ b/src/html/universidades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../../dist/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
@@ -13,26 +13,26 @@
     <header class="bg-black">
         <nav class="flex flex-col lg:flex-row items-center justify-between lg:mx-10 p-4">
             <div class="mb-3 lg:mb-0">
-                <a href="/src/index.html">
-                    <img class="inline h-12 w-auto mr-3" src="/images/logo2.png" alt="Logo">
+                <a href="../index.html">
+                    <img class="inline h-12 w-auto mr-3" src="../../images/logo2.png" alt="Logo">
                     <h1 class="inline font-lilita text-2xl text-soft-gray align-middle">Ingreso a Universidades</h1>
                 </a>
             </div>
             <div>
                 <ul class="font-nunito font-semibold text-white">
-                    <li class="inline"><a class="hover:text-soft-gray" href="/src/index.html">Inicio</a></li>
+                    <li class="inline"><a class="hover:text-soft-gray" href="../index.html">Inicio</a></li>
                     <li class="inline ml-10">
                         <div tabindex="0" class="dropdown dropdown-hover dropdown-end"> 
                         <p class="hover:text-soft-gray">Simulador</p>
                         <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-60 font-normal text-black">
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_numerico.html">Razonamiento Numérico</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_logico.html">Razonamiento Lógico</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_verbal.html">Razonamiento Verbal</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/atencion_concentracion.html">Atención y Concentración</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="razonamiento_numerico.html">Razonamiento Numérico</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="razonamiento_logico.html">Razonamiento Lógico</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="razonamiento_verbal.html">Razonamiento Verbal</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="atencion_concentracion.html">Atención y Concentración</a></li>
                         </ul>
                         </div>
                     </li>
-                    <li class="inline ml-10"><a class="hover:text-soft-gray" href="/src/html/universidades.html">Universidades</a></li>
+                    <li class="inline ml-10"><a class="hover:text-soft-gray" href="universidades.html">Universidades</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,7 +40,7 @@
     <main class="py-8">
         <section class="lg:mx-10">
             <div class="flex items-center space-x-7 justify-center">
-                <img class="w-auto h-56" src="/images/Central.png" alt="">
+                <img class="w-auto h-56" src="../../images/Central.png" alt="">
                 <h1 class="basis-1/2 font-lilita text-4xl text-black">Universidad Central del Ecuador</h1>
             </div>
             <div class="font-nunito mt-10">
@@ -72,7 +72,7 @@
         <hr class="lg:mx-10 my-8">
         <section class="lg:mx-10">
             <div class="flex items-center space-x-7 justify-center">
-                <img class="w-auto h-56" src="/images/Politecnica.png" alt="">
+                <img class="w-auto h-56" src="../../images/Politecnica.png" alt="">
                 <h1 class="basis-1/2 font-lilita text-4xl text-black">Escuela Politécnica Nacional</h1>
             </div>
             <div class="font-nunito mt-10">
