--- a/src/html/razonamiento_verbal.html
+++ b/src/html/razonamiento_verbal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../../dist/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <header class="bg-black">
         <div class="p-4 font-nunito text-white lg:mx-10">
-            <a href="/src/index.html"><img class="w-auto h-12" src="/images/regreso.png" alt=""></a>
+            <a href="../index.html"><img class="w-auto h-12" src="../../images/regreso.png" alt=""></a>
         </div>
     </header>
     <main class="bg-verbal bg-fixed bg-cover bg-center font-nunito h-screen">
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div class="flex flex-col items-end font-semibold">
-                <a class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="/src/php/evaluation.php?EVAL_TYPE=razonamiento_verbal">
+                <a class="btn gap-2 bg-soft-blue text-black border-0 hover:bg-soft-gray hover:text-white" href="../php/evaluation.php?EVAL_TYPE=razonamiento_verbal">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                     </svg>
