--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
@@ -13,52 +13,52 @@
     <header class="bg-black">
         <nav class="flex flex-col lg:flex-row items-center justify-between lg:mx-10 p-4">
             <div class="mb-3 lg:mb-0">
-                <a href="/src/index.html">
-                    <img class="inline h-12 w-auto mr-3" src="/images/logo2.png" alt="Logo">
+                <a href="index.html">
+                    <img class="inline h-12 w-auto mr-3" src="../images/logo2.png" alt="Logo">
                     <h1 class="inline font-lilita text-2xl text-soft-gray align-middle">Ingreso a Universidades</h1>
                 </a>
             </div>
             <div>
                 <ul class="font-nunito font-semibold text-white">
-                    <li class="inline"><a class="hover:text-soft-gray" href="/src/index.html">Inicio</a></li>
+                    <li class="inline"><a class="hover:text-soft-gray" href="index.html">Inicio</a></li>
                     <li class="inline ml-10">
                         <div tabindex="0" class="dropdown dropdown-hover dropdown-end"> 
                         <p class="hover:text-soft-gray">Simulador</p>
                         <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-60 font-normal text-black">
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_numerico.html">Razonamiento Numérico</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_logico.html">Razonamiento Lógico</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/razonamiento_verbal.html">Razonamiento Verbal</a></li>
-                            <li><a class="active:bg-soft-pink active:text-black" href="/src/html/atencion_concentracion.html">Atención y Concentración</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="html/razonamiento_numerico.html">Razonamiento Numérico</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="html/razonamiento_logico.html">Razonamiento Lógico</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="html/razonamiento_verbal.html">Razonamiento Verbal</a></li>
+                            <li><a class="active:bg-soft-pink active:text-black" href="html/atencion_concentracion.html">Atención y Concentración</a></li>
                         </ul>
                         </div>
                     </li>
-                    <li class="inline ml-10"><a class="hover:text-soft-gray" href="/src/html/universidades.html">Universidades</a></li>
+                    <li class="inline ml-10"><a class="hover:text-soft-gray" href="html/universidades.html">Universidades</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <main class="bg-black pb-4">
         <section class="relative w-100 h-[35rem] mb-10">
-            <img class="object-cover w-full h-full" src="/images/graduation.jpeg" alt="graduacion de jovenes">
+            <img class="object-cover w-full h-full" src="../images/graduation.jpeg" alt="graduacion de jovenes">
             <div class="absolute inset-x-5 top-24">
                 <h1 class="font-lilita font-bold text-3xl text-white text-center">¡Bienvenido al sitio web preferido por los jóvenes!</h1>
             </div>
         </section>
         <section class="flex flex-col justify-center items-center space-y-7 lg:space-y-0 lg:flex-row lg:mx-10 font-nunito text-center text-white">
             <div class="flex flex-col items-center justify-center">
-                <img class="w-auto h-32" src="/images/ordenador-personal.png" alt="">
+                <img class="w-auto h-32" src="../images/ordenador-personal.png" alt="">
                 <p class="px-36 lg:px-20 py-5">
                     Prepárate para el examen de ingreso a la universidad con nuestros simuladores
                 </p>
             </div>
             <div class="flex flex-col items-center justify-center">
-                <img class="w-auto h-32" src="/images/libro-de-matematicas.png" alt="">
+                <img class="w-auto h-32" src="../images/libro-de-matematicas.png" alt="">
                 <p class="px-36 lg:px-20 py-5">
                     Estudia cada aptitud que se evalúa en el examen de ingreso con nuestro temario
                 </p>
             </div>
             <div class="flex flex-col items-center justify-center">
-                <img class="w-auto h-32" src="/images/escuela.png" alt="">
+                <img class="w-auto h-32" src="../images/escuela.png" alt="">
                 <p class="px-36 lg:px-20 py-5">
                     Descubre cuáles son los requisitos que tienes que cumplir para entrar a tu universidad preferida
                 </p>
