universities page modified and some fixes in the evaluation

--- a/src/html/universidades.html
+++ b/src/html/universidades.html
@@ -40,66 +40,70 @@
     </header>
     <main class="py-8">
         <section class="lg:mx-10">
-            <div class="flex items-center space-x-7 justify-center">
-                <img class="w-auto h-56" src="../../images/Central.png" alt="">
-                <h1 class="basis-1/2 font-lilita text-4xl text-black">Universidad Central del Ecuador</h1>
-            </div>
-            <div class="font-nunito mt-10">
-                <h3 class="font-bold text-xl">Requisitos:</h3>
-                <ul class="font-normal text-base pl-10 list-disc mt-3">
-                    <li>
-                        Tener título de bachiller o estar próximo a graduarse: Debes haber completado tus estudios de educación secundaria y obtener el título de bachiller. 
-                        Algunos programas pueden requerir un enfoque específico de materias durante la educación secundaria.
-                    </li>
-                    <li>
-                        Rendir el Examen Nacional para la Educación Superior (ENES): El ENES es un examen estandarizado en Ecuador que evalúa los conocimientos y habilidades 
-                        de los estudiantes. Es obligatorio presentarlo para postular a la Universidad Central del Ecuador y otras universidades del país.
-                    </li>
-                    <li>
-                        Registro y postulación en el Sistema Nacional de Nivelación y Admisión (SNNA): Después de rendir el ENES, debes registrarte en el SNNA y realizar la 
-                        postulación para ingresar a la universidad y a la carrera de tu elección.
-                    </li>
-                    <li>
-                        Cumplir con el puntaje mínimo requerido: Cada carrera y facultad puede establecer un puntaje mínimo en el ENES como requisito de ingreso. Debes obtener 
-                        un puntaje igual o superior al establecido para poder ser admitido.
-                    </li>
-                    <li>
-                        Documentación requerida: Por lo general, se te solicitará presentar una serie de documentos como tu cédula de identidad, certificado de votación, certificado 
-                        de bachiller, entre otros. Los documentos específicos pueden variar, así que es importante verificar con la universidad los requisitos exactos.
-                    </li>
-                </ul>
+            <div class="carousel rounded-box">
+                <div class="carousel-item w-1/2">
+                    <div class="flex items-center space-x-7 justify-center">
+                        <img class="w-auto h-56" src="../../images/Central.png" alt="logo universidad central"/>
+                        <h1 class="basis-1/2 font-lilita text-4xl text-black">Universidad Central del Ecuador</h1>
+                    </div>
+                </div> 
+                <div class="carousel-item w-1/2">
+                    <div class="flex items-center space-x-7 justify-center">
+                        <img class="w-auto h-56" src="../../images/Politecnica.png" alt="logo universidad politecnica"/>
+                        <h1 class="basis-1/2 font-lilita text-4xl text-black">Escuela Politécnica Nacional</h1>
+                    </div>
+                </div> 
+                <div class="carousel-item w-1/2">
+                    <div class="flex items-center space-x-7 justify-center">
+                        <img class="w-auto h-56" src="../../images/ESPE.png" alt="logo universidad politecnica"/>
+                        <h1 class="basis-1/2 font-lilita text-4xl text-black">Universidad de las Fuerzas Armadas - ESPE</h1>
+                    </div>
+                </div> 
             </div>
         </section>
         <hr class="lg:mx-10 my-8">
-        <section class="lg:mx-10">
-            <div class="flex items-center space-x-7 justify-center">
-                <img class="w-auto h-56" src="../../images/Politecnica.png" alt="">
-                <h1 class="basis-1/2 font-lilita text-4xl text-black">Escuela Politécnica Nacional</h1>
-            </div>
+        <section class="lg:mx-10 mb-4">
             <div class="font-nunito mt-10">
-                <h3 class="font-bold text-xl">Requisitos:</h3>
-                <ul class="font-normal text-base pl-10 list-disc mt-3">
+                <p class="py-4">
+                    ¡Tu futuro está lleno de posibilidades y oportunidades emocionantes! Si sueñas con ingresar a una universidad pública en Ecuador y alcanzar tus metas 
+                    académicas y profesionales, estás en el lugar correcto. Aquí te brindamos consejos y requisitos para que te prepares y logres cumplir tus sueños universitarios. 
+                    ¡Comienza tu camino hacia el éxito!
+                </p>
+                <h3 class="font-bold text-xl">Consejos y requisitos:</h3>
+                <ol class="font-normal text-base pl-10 list-decimal mt-3 space-y-3">
                     <li>
-                        Tener título de bachiller o estar próximo a graduarse: Debes haber completado tus estudios de educación secundaria y obtener el título de bachiller. 
-                        Algunos programas pueden requerir un enfoque específico de materias durante la educación secundaria.
+                        <i>¡Prepárate para brillar en el ENES!</i> El Examen Nacional de Educación Superior (ENES) es tu oportunidad de demostrar tus habilidades y conocimientos. 
+                        Dedica tiempo a estudiar y repasar los temas evaluados en el examen. Utiliza recursos de estudio, como guías y ejercicios prácticos, y busca grupos 
+                        de estudio para motivarte y compartir ideas.
                     </li>
                     <li>
-                        Rendir el Examen Nacional para la Educación Superior (ENES): El ENES es un examen estandarizado en Ecuador que evalúa los conocimientos y habilidades 
-                        de los estudiantes. Es obligatorio presentarlo para postular a la Universidad Central del Ecuador y otras universidades del país.
+                        <i>Encuentra tu pasión y elige sabiamente</i>. La elección de una carrera es una decisión importante. Investiga las diferentes opciones que ofrecen las 
+                        universidades públicas y descubre qué te apasiona. Piensa en tus intereses, habilidades y metas a largo plazo. ¡Encuentra esa carrera que te haga 
+                        sentir emocionado y motivado por aprender cada día!
                     </li>
                     <li>
-                        Registro y postulación en el Sistema Nacional de Nivelación y Admisión (SNNA): Después de rendir el ENES, debes registrarte en el SNNA y realizar la 
-                        postulación para ingresar a la universidad y a la carrera de tu elección.
+                        <i>Destaca en tus estudios</i>. Aunque el ENES es relevante, también es importante mantener un buen rendimiento académico durante la educación secundaria. 
+                        Estudia con dedicación, participa en clase y busca oportunidades de aprendizaje adicionales. ¡Sé el protagonista de tu propia educación y esfuérzate 
+                        por alcanzar tu máximo potencial!
                     </li>
                     <li>
-                        Cumplir con el puntaje mínimo requerido: Cada carrera y facultad puede establecer un puntaje mínimo en el ENES como requisito de ingreso. Debes obtener 
-                        un puntaje igual o superior al establecido para poder ser admitido.
+                        <i>Mantente actualizado e informado</i>. Mantén un ojo en las fechas y plazos importantes del proceso de admisión. Sigue las redes sociales de las universidades y 
+                        visita sus sitios web para obtener información actualizada. Asiste a ferias educativas y eventos informativos para conocer más sobre las carreras y programas 
+                        que ofrecen.
                     </li>
                     <li>
-                        Documentación requerida: Por lo general, se te solicitará presentar una serie de documentos como tu cédula de identidad, certificado de votación, certificado 
-                        de bachiller, entre otros. Los documentos específicos pueden variar, así que es importante verificar con la universidad los requisitos exactos.
+                        <i>Prepárate para deslumbrar en las pruebas adicionales.</i> Algunas carreras pueden requerir pruebas específicas adicionales al ENES. Investiga sobre estas pruebas y prepárate 
+                        adecuadamente. Consulta los materiales de estudio recomendados, busca tutoriales en línea y, sobre todo, mantén una actitud positiva y confía en tus habilidades.
                     </li>
-                </ul>
+                    <li>
+                        <i>Construye una red de apoyo.</i> Comparte tus sueños y metas con tus seres queridos y busca su apoyo. Además, considera unirte a grupos estudiantiles, clubes o actividades extracurriculares 
+                        relacionadas con tus intereses. Conoce a otros estudiantes con metas similares y apóyense mutuamente en este emocionante viaje.
+                    </li>
+                </ol>
+                <p class="py-4">
+                    Recuerda que cada paso que tomes te acerca a tus sueños. Mantén tu motivación alta, mantente enfocado y nunca te rindas. ¡Eres capaz de lograr grandes cosas y dejar una huella positiva en el mundo! ¡Adelante, el futuro te espera!
+                    Espero que estos consejos y requisitos te resulten útiles y te inspiren en tu camino hacia ingresar a una universidad pública en Ecuador. ¡Mucho éxito en tus estudios y en la consecución de tus sueños!
+                </p>
             </div>
         </section>
     </main>
